# Nissa

./: .env  .env.example  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: development.yaml
Nisaa/: main.py  setup.sh
Nisaa/.github/workflows/: development.yaml
Nisaa/src/nisaa/api/: rest_server.py
data/IHI-MEDICAL-CAMP/: Patient Registrations.json
src/nisaa/: server.py
src/nisaa/api/: chatbot_router.py  extract_router.py  ingestion_router.py  rest_server.py  wati_router.py  zoho_router.py
src/nisaa/config/: db.py  db_connection.py  logger.py  s3_client.py
src/nisaa/controllers/: extract_controller.py  file_deduplication.py  ingestion_pipeline.py  job_manager.py  retrival_controller.py
src/nisaa/graphs/: graph.py  node.py  state.py
src/nisaa/helpers/: agent_factory.py  db.py  logger.py  long_term_memory.py  memory_store.py  postgres_store.py  proxy.py  s3_client.py  short_term_memory.py  tika_client.py  top_k_fetch.py
src/nisaa/models/: agent.py  agent_context.py  chat_manager.py  db_operations.py  extract_model.py  leads_management.py  tools.py
src/nisaa/prompt/: chat_bot.py
src/nisaa/rag/: graph.py  node.py  state.py
src/nisaa/router/: ingestion_router.py  wati_router.py
src/nisaa/services/: checkpoint_manager.py  custom_loader.py  document_loader.py  embedding_service.py  file_deduplication.py  job_manager.py  json_processor.py  pinecone_client.py  s3_downloader.py  sql_database.py  text_extract.py  top_k_fetch.py  vector_store_service.py  wati_api_service.py  website_scrap.py  zoho_connector.py  zoho_data_downloader.py
src/nisaa/sql_agent/: agent.py  agent_context.py  booking_operations.py  chat_manager.py  doctor_operations.py  leads_management.py  tools.py
src/nisaa/templates/: booking_not_successful.html  booking_success.html  cancel_successful.html  cancel_unsucessfull.html  cancel_unsucessfull_isuue.html  update_in_progress.html  update_successfull.html  update_unsucessfull.html
src/nisaa/utils/: document_loader.py  json_processor.py  s3_downloader.py  sql_database.py  text_extract.py  website_scrap.py  zoho_data_downloader.py
web_info/: web_info.json
