[project]
name = "nisaa"
version = "0.1.0"
description = ""
authors = [
    {name = "priyanshu",email = "priyanshu.sahu@nzminds.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3,<3.0.0",
    "python-multipart==0.0.20",
    "langgraph>=1.0.1,<2.0.0",
    "openai>=1.58.0,<2.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "pinecone>=5.4.0,<6.0.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-pinecone>=0.2.0,<0.3.0",
    "langchain-core>=0.3.34,<1.0.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "chardet>=5.2.0,<6.0.0",
    "beautifulsoup4>=4.14.2,<5.0.0",
    "playwright>=1.55.0,<2.0.0",
    "selenium>=4.38.0,<5.0.0",
    "lxml>=6.0.2,<7.0.0",
    "bs4>=0.0.2,<0.0.3",
    "html2text>=2025.4.15,<2026.0.0",
    "boto3 (>=1.40.62,<2.0.0)",
    "pymupdf (>=1.26.5,<2.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "psycopg-binary (>=3.2.12,<4.0.0)",
]

[tool.poetry]
packages = [{include = "nisaa", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"